--- a/config-server/src/main/resources/shared/project-service.yml
+++ b/config-server/src/main/resources/shared/project-service.yml
@@ -1,8 +1,11 @@
 spring:
+  application:
+    name: project-service
+
   datasource:
     url: jdbc:postgresql://localhost:5432/workforge
-    username: workforge
-    password: workforge
+    username: postgres
+    password: root
   jpa:
     hibernate:
       ddl-auto: validate
